card image border breaks in chrome, so a temporary fix

--- a/assets/sass/objects/_card.scss
+++ b/assets/sass/objects/_card.scss
@@ -67,15 +67,13 @@
     
     &:before,
     &:after {
-      @supports (mix-blend-mode: soft-light) {
-        content: "";
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        box-shadow: inset 0 0 0 2px rgba($black, .75);
-        mix-blend-mode: soft-light; } } } }
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      box-shadow: inset 0 0 0 2px rgba($alternate, .1); } } }
 
 // Card body
 // ---------------------------
